<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".accounts.AddAccountActivity">

    <TextView
        android:id="@+id/txtAddAccountInputOtherSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.67"
        android:text="@string/accounts_txtAddAccountInputOtherSecurity"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkAppBiometrics"
        app:layout_constraintVertical_bias="0.229" />

    <EditText
        android:id="@+id/inputOtherSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="e.g., Voice Recognition"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:alpha="0.67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountInputOtherSecurity"
        app:layout_constraintVertical_bias="0.222" />

    <CheckBox
        android:id="@+id/chkAppPinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxAppPinCode"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/chkBackupCodes"
        app:layout_constraintTop_toBottomOf="@+id/chkQuestions"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkAppNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxAppNotifications"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/chkAppBiometrics"
        app:layout_constraintTop_toBottomOf="@+id/chkAppPinCode"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkBackupCodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxBackupCodes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkSecurityKey"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkAppBiometrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxAppBiometrics"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkBackupCodes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAddAccountInputSSO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountInputSSO"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:alpha="0.67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountInputPhone"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/inputSSO"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:alpha="0.67"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputSSO"
        app:layout_constraintTop_toBottomOf="@+id/inputPhone"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        android:textColor="@color/white"
        android:alpha="0.67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputPhone"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/txtAddAccountInputPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountInputPhone"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:alpha="0.67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountInputEmail"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/txtAddAccountInputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountInputEmail"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:alpha="0.67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountInputName"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:alpha="0.67"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/txtAddAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="e.g., Instagram (Private)"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputName"
        app:layout_constraintTop_toBottomOf="@+id/inputServiceID"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/btnAccountSubmit"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/blue"
        android:onClick="saveToDatabase"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputOtherSecurity"
        app:layout_constraintTop_toBottomOf="@+id/chkAppNotifications" />

    <TextView
        android:id="@+id/txtAddAccountInputServiceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountInputServiceID"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountTitle"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/inputServiceID"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/txtAddAccountInputServiceID"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountTitle"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/txtAddAccountInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountInputName"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputServiceID"
        app:layout_constraintVertical_bias="0.045" />

    <CheckBox
        android:id="@+id/chkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxPassword"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAccountInputSSO"
        app:layout_constraintVertical_bias="0.073" />

    <CheckBox
        android:id="@+id/chkSecurityKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxSecurityKey"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkPhone"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxOTP"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/chkPhone"
        app:layout_constraintTop_toBottomOf="@+id/chkEmail"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxEmail"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/chkPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputSSO"
        app:layout_constraintVertical_bias="0.055" />

    <CheckBox
        android:id="@+id/chkQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxQuestions"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/chkSecurityKey"
        app:layout_constraintTop_toBottomOf="@+id/chkOTP"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_txtAddAccountCheckboxPhone"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkPassword"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>